# rx7-headunit

./: BLUETOOTH_README.md  README.md  angular.json  bun.lockb  package-lock.json  package.json
.github/workflows/: build-arm64.yml
deploy/: headunit-updater.service  headunit-updater.sh  headunit.service  setup-pi.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  bluetooth.rs  display.rs  media_player.rs  mod.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
src/app/components/controls/: controls.component.css  controls.component.html  controls.component.ts
src/app/components/soundboard/: soundboard.component.css  soundboard.component.html  soundboard.component.ts
src/app/pages/audio-settings/: audio-settings.component.css  audio-settings.component.html  audio-settings.component.ts
src/app/pages/bluetooth-settings/: bluetooth-settings.component.css  bluetooth-settings.component.html  bluetooth-settings.component.ts
src/app/pages/home/: home.component.css  home.component.html  home.component.ts
src/app/pages/intro/: intro.component.css  intro.component.html  intro.component.ts
src/app/pages/screensaver/: screensaver.component.css  screensaver.component.html  screensaver.component.spec.ts  screensaver.component.ts
src/app/services/: bluetooth.service.ts  crt-scene.service.ts
src/assets/video/screensavers/: girl_short.mov
