[package]
name = "headunit"
version = "0.1.0"
description = "a cool custom headunit for my rx7 fc3s"
authors = ["bboynton97@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "headunit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.20.1"
rppal = "0.14.1"
bluer = { version = "0.17", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
once_cell = "1.19"

